# qgrep-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: hol-skill-validate.yml
agents/: code-search.md
hooks/: hooks.json  intercept_grep.py  record_grep_latency.py
skills/code-search/: SKILL.md
src/qgrep_mcp/: __init__.py  __main__.py  api.py  cli.py  config.py  estimator.py  index.py  ripgrep.py  search.py  server.py
tests/: test_api.py  test_cli.py  test_estimator.py  test_hook.py  test_index.py  test_search.py
