[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qgrep-mcp"
version = "0.1.0"
description = "Indexed code search MCP server with intelligent ripgrep fallback"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
qgrep-mcp = "qgrep_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qgrep_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
